--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           go-version-file: 'go.mod'
       - name: Build
-        run: go build -o build/_output/onos-pci ./cmd/onos-pci
+        run: make build
 
   lint:
     runs-on: ubuntu-latest
@@ -39,9 +39,7 @@ jobs:
         with:
           go-version-file: 'go.mod'
       - name: Unit tests
-        run: |
-          go test -race github.com/onosproject/onos-pci/pkg/...
-          go test -race github.com/onosproject/onos-pci/cmd/...
+        run: make test
 
   docker-build:
     runs-on: ubuntu-latest
@@ -51,11 +49,7 @@ jobs:
         with:
           go-version-file: 'go.mod'
       - name: Build Docker image
-        run: |
-          git clone https://github.com/onosproject/build-tools.git build/build-tools
-          go mod vendor
-          docker build . -f build/onos-pci/Dockerfile -t onosproject/onos-pci:latest
-          rm -rf vendor
+        run: make images
 
   license-check:
     runs-on: ubuntu-latest
